k8s/redis/deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: visit.192.168.15.43.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: visit-counter-service
              port:
                number: 3000
